# pytorch-parallel-compiler

./: CLAUDE.md  LICENSE  README.md  __init__.py  __main__.py  gitignore  main.py  pyproject.toml  requirements.txt  util.py
benchmarks/: a100_benchmark_all_quick_20260117_005331.json
core/: __init__.py  stage_block.py  stage_layer.py  traced_wide.py  tree.py  wide_model.py
wide_compiler/: __init__.py  __main__.py  api.py  cli.py
wide_compiler/core/: __init__.py  config.py  ensemble_util.py  registry.py  traced_benchmark.py  traced_wide.py  wide_model.py
wide_compiler/core/autotune/: conv2d_difference_check.py  conv2d_grouped_vs_sequential.py  einsum_conv2d_speed_test.py  linear_difference_check.py
wide_compiler/core/benchmark/: SCHEMA.md  __init__.py  benchmark_api.py  benchmark_registry.py  benchmark_runner.py  benchmark_schema.py  traced_wide_benchmark.py  wide_conv1d_benchmark.py
wide_compiler/core/primitives/: __init__.py  wide_adaptive_avgpool2d.py  wide_attention.py  wide_batchnorm_1d.py  wide_batchnorm_2d.py  wide_batchnorm_3d.py  wide_conv1d.py  wide_conv2d.py  wide_conv3d.py  wide_convtranspose1d.py  wide_convtranspose2d.py  wide_cross_attention.py  wide_dropout.py  wide_embedding.py  wide_groupnorm.py  wide_gru.py  wide_instancenorm.py  wide_layernorm.py  wide_linear.py  wide_lstm.py  wide_prelu.py  wide_rnn.py
wide_compiler/core/strategy/: inductor.py
