[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-parallel-compiler"
version = "0.0.1"
description = "multimodal, geometric, fractal, geofractal, audio, visual, classification, predictive, and symbiosis-based models."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "AbstractPhil", email = "abstractpowered@outlook.com" }]
keywords = ["fractal", "geometry", "multimodal", "multi-modal", "geofractal", "nlp", "symbolic", "embeddings", "simplex", "ksimplex"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "numpy>=1.23",
  "datasets>=2.15",
  "torch>=2.1"
]

[project.urls]
Homepage = "https://huggingface.co/AbstractPowered"
Repository = "https://github.com/AbstractEyes/AbstractEyes/pytorch-parallel-compiler"
Issues = "https://github.com/AbstractEyes/AbstractEyes/pytorch-parallel-compiler/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["core"]
include = ["geofractal*", "geovocab2*"]