[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wide_compiler"
version = "0.0.2"
description = "pytorch compilation for parallel wide models."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "AbstractPhil", email = "abstractpowered@outlook.com" }]
keywords = ["pytorch", "compiler", "parallel", "wide", "batched", "grouped", "torch.compile", "fx", "tracing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "numpy>=1.23",
  "torch>=2.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "tabulate",
]

[project.urls]
Homepage = "https://huggingface.co/AbstractPhil"
Repository = "https://github.com/AbstractEyes/pytorch-parallel-compiler"
Issues = "https://github.com/AbstractEyes/pytorch-parallel-compiler/issues"

[project.scripts]
wide-compiler = "wide_compiler.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wide_compiler*"]